# curvedraw

./: .clang_complete  .gitignore  .hgignore  CMakeLists.txt  Makefile  README.md  curvedraw.sln  curvedraw.vcxproj  curvedraw.vcxproj.filters  res.qrc
src/: app.cc  app.h  curve.cc  curve.h  curvefile.cc  curvefile.h  main.cc  main_glut.cc  main_qt.cc  main_qt.h  opengl.h  widgets.cc  widgets.h
